@@ -69,7 +69,7 @@ sub edit {
     $request->{control_code} = '';
     $request->{class_id} = 0 unless $request->{class_id} = 0;
     my $b_unit = LedgerSMB::DBObject::Business_Unit->new(%$request);
-    $b_unit->get;
+    $b_unit->get($request->{id});
     _display($b_unit);
 }
 
